--- a/src/assets/styles/components/dialog.css
+++ b/src/assets/styles/components/dialog.css
@@ -11,7 +11,7 @@
 .dialog {
     box-sizing: border-box;
     display: flex;
-    width: 1024px;
+    width: 1200px;
     height: 640px;
     margin: auto;
     background-color: var(--color-light-bg);
@@ -32,6 +32,15 @@
     border-width: 0;
 }
 
+.dialog__tab-content {
+    box-sizing: border-box;
+    display: none;
+    width: 100%;
+    height: calc(100% - 80px);
+    padding: 24px;
+    overflow-y: auto;
+}
+
 .dialog__spinner {
     display: none;
     box-sizing: border-box;
@@ -44,7 +53,7 @@
     margin: auto;
 }
 
-.dialog__view {
+.dialog__body {
     box-sizing: border-box;
     display: none;
     width: 100%;
@@ -56,6 +65,6 @@
     display: block;
 }
 
-.dialog--loaded > .dialog__view {
+.dialog--loaded > .dialog__body{
     display: block;
 }
