--- a/src/assets/styles/states.css
+++ b/src/assets/styles/states.css
@@ -9,3 +9,9 @@
 #tab-selector-3:checked ~ .tab-list > #tab-3 > .tab__text {color: var(--color-light-text);}
 #tab-selector-4:checked ~ .tab-list > #tab-4 > .tab__text {color: var(--color-light-text);}
 #tab-selector-5:checked ~ .tab-list > #tab-5 > .tab__text {color: var(--color-light-text);}
+
+#tab-selector-1:checked ~ #tab-content-1 {display: block;}
+#tab-selector-2:checked ~ #tab-content-2 {display: block;}
+#tab-selector-3:checked ~ #tab-content-3 {display: block;}
+#tab-selector-4:checked ~ #tab-content-4 {display: block;}
+#tab-selector-5:checked ~ #tab-content-5 {display: block;}
