--- a/src/assets/styles/components/dialog.css
+++ b/src/assets/styles/components/dialog.css
@@ -12,33 +12,12 @@
     box-sizing: border-box;
     display: flex;
     width: 1200px;
-    height: 640px;
+    height: 672px;
     margin: auto;
     background-color: var(--color-light-bg);
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    border: 1px solid #e9ecef;
     border-radius: 8px;
     overflow: hidden;
-}
-
-.dialog__tab-input {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
-}
-
-.dialog__tab-content {
-    box-sizing: border-box;
-    display: none;
-    width: 100%;
-    height: calc(100% - 80px);
-    padding: 24px;
-    overflow-y: auto;
 }
 
 .dialog__spinner {
@@ -53,11 +32,50 @@
     margin: auto;
 }
 
-.dialog__body {
+.dialog__content {
     box-sizing: border-box;
     display: none;
     width: 100%;
     height: 100%;
+}
+
+.dialog__input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+.dialog__header {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 72px;
+    padding-left: 24px;
+    padding-right: 24px;
+    background-color: var(--color-light-fg);
+    border-bottom: 0.1px solid var(--color-light-divider);
+}
+
+.dialog__logo {
+    width: 36px;
+    height: auto;
+}
+
+.dialog__body {
+    box-sizing: border-box;
+    display: none;
+    width: 100%;
+    height: 600px;
+    padding: 24px;
     overflow-y: auto;
 }
 
@@ -65,6 +83,6 @@
     display: block;
 }
 
-.dialog--loaded > .dialog__body{
+.dialog--loaded > .dialog__content{
     display: block;
 }
