--- a/src/assets/styles/components/tab-list.css
+++ b/src/assets/styles/components/tab-list.css
@@ -2,10 +2,20 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
+    width: auto;
+    height: 100%;
+    background-color: var(--color-light-fg);
+}
+
+.tab-list__item {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 80px;
-    background-color: var(--color-light-fg);
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+    width: 148px;
+    height: 100%;
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    cursor: pointer;
 }
