--- a/src/assets/styles/components/input.css
+++ b/src/assets/styles/components/input.css
@@ -14,6 +14,10 @@
     color: var(--color-light-text);
 }
 
+.dark .input {
+    color: var(--color-dark-text);
+}
+
 .input:focus {
     outline: none;
 }
