--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -5,8 +5,13 @@
     width: 100%;
     height: 100%;
     background-color: var(--color-light-fg);
-    border: 1px solid #e9ecef;
+    border: 1px solid var(--color-light-divider);
     border-radius: 4px;
+}
+
+.dark .paper {
+    background-color: var(--color-dark-fg);
+    border: 1px solid var(--color-dark-divider);
 }
 
 .paper__header {
@@ -16,6 +21,10 @@
     height: auto;
     padding: 16px;
     border-bottom: 1px solid var(--color-light-divider);
+}
+
+.dark .paper__header {
+    border-bottom: 1px solid var(--color-dark-divider);
 }
 
 .paper__body {
