--- a/src/assets/styles/components/toggle-button.css
+++ b/src/assets/styles/components/toggle-button.css
@@ -6,18 +6,22 @@
     align-items: center;
     width: auto;
     height: auto;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .toggle-button__input {
     box-sizing: border-box;
     display: block;
     position: absolute;
+    z-index: 20;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     -webkit-appearance: none;
     appearance: none;
+    cursor: pointer;
 }
 
 .toggle-button__icon {
@@ -25,6 +29,10 @@
     width: 16px;
     height: auto;
     color: var(--color-light-text-alt);
+}
+
+.dark .toggle-button__icon {
+    color: var(--color-dark-text-alt);
 }
 
 .toggle-button__track {
@@ -38,10 +46,20 @@
     background-color: var(--color-light-spinner-track);
 }
 
+.dark .toggle-button__track {
+    background-color: var(--color-dark-spinner-track);
+}
+
 .toggle-button__handle {
     box-sizing: border-box;
+    position: relative;
+    z-index: 10;
     width: 12px;
     height: 12px;
     border-radius: 9999px;
     background-color: var(--color-light-bg);
+}
+
+.toggle-button__input:checked ~ .toggle-button__track > .toggle-button__handle {
+    transform: translateX(20px);
 }
