--- a/src/assets/styles/components/button.css
+++ b/src/assets/styles/components/button.css
@@ -3,14 +3,15 @@
     display: block;
     width: auto;
     height: auto;
-    padding: 12px 24px;
-    background-color: #ffa8a8;
+    padding: 16px 24px;
+    background-color: var(--color-red);
     border: none;
     border-radius: 4px;
     font-family: inherit;
     font-size: 12px;
     font-weight: 600;
-    color: var(--color-light-text);
+    color: var(--color-dark-text);
     text-transform: uppercase;
     letter-spacing: 1px;
+    cursor: pointer;
 }
