--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -6,7 +6,9 @@
     height: 100%;
     background-color: var(--color-light-fg);
     border: 1px solid var(--color-light-divider);
-    border-radius: 4px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    overflow: hidden;
 }
 
 .dark .paper {
@@ -30,7 +32,36 @@
 .paper__body {
     flex: 1 1 0%;
     box-sizing: border-box;
+    position: relative;
     width: 100%;
     height: auto;
     padding: 16px;
+}
+
+.paper__frame {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.paper__frame::-webkit-scrollbar {
+    display: none;
+}
+
+.paper__overflow {
+    box-sizing: border-box;
+    width: 100%;
+    height: 450px;
+}
+
+.paper__overflow--red {
+    background-color: crimson;
+}
+
+.paper__overflow--green {
+    background-color: darkgreen;
 }
