--- a/src/assets/styles/components/dialog.css
+++ b/src/assets/styles/components/dialog.css
@@ -85,7 +85,7 @@
     box-sizing: border-box;
     display: none;
     width: 100%;
-    height: 600px;
+    height: calc(100% - 72px);
     padding: 24px;
     overflow-y: auto;
 }
