--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -6,8 +6,7 @@
     height: 100%;
     background-color: var(--color-light-fg);
     border: 1px solid var(--color-light-divider);
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -23,6 +22,7 @@
     height: auto;
     padding: 16px;
     border-bottom: 1px solid var(--color-light-divider);
+    background-color: #dee2e6;
 }
 
 .dark .paper__header {
@@ -46,6 +46,7 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
+    padding: 8px 16px;
 }
 
 .paper__frame::-webkit-scrollbar {
