--- a/src/assets/styles/components/row.css
+++ b/src/assets/styles/components/row.css
@@ -7,10 +7,22 @@
     height: 100%;
 }
 
+.row--wrap {
+    flex-wrap: wrap;
+}
+
+.row--no-gap {
+    gap: 0;
+}
+
 .row__section {
     flex: 1 1 0%;
 }
 
+.row__section--half {
+    width: 50%;
+}
+
 .row__section--fixed {
-    flex: 0 0 auto;
+    flex: 0 1 auto;
 }
