--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -1,9 +1,10 @@
 .grid {
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-rows: auto auto 1fr auto;
     width: 100%;
-    height: auto;
+    height: 100%;
     gap: 24px;
 }
 
@@ -11,6 +12,14 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+}
+
+.grid__item--col-span-2 {
+    grid-column: span 2 / span 2;
+}
+
+.grid__item--row-span-4 {
+    grid-row: span 4 / span 4;
 }
 
 .grid__item--span {
