--- a/src/assets/styles/components/input.css
+++ b/src/assets/styles/components/input.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 48px;
     margin: 0;
     padding: 0 16px;
     border: 1px solid var(--color-light-divider);
@@ -12,7 +12,6 @@
     font-weight: 600;
     color: var(--color-light-text);
     background-color: var(--color-light-fg);
-    border-radius: 8px;
 }
 
 .input::placeholder {
