--- a/src/assets/styles/components/text.css
+++ b/src/assets/styles/components/text.css
@@ -22,7 +22,7 @@
     text-transform: uppercase;
     letter-spacing: 0.8px;
     color: var(--color-light-text-alt);
-    margin-bottom: 4px;
+    margin-bottom: 12px;
 }
 
 .dark .text--title {
@@ -35,6 +35,7 @@
     text-transform: uppercase;
     letter-spacing: 1.6px;
     color: var(--color-light-text);
+    line-height: 28px;
 }
 
 .dark .text--balance {
@@ -45,6 +46,7 @@
     font-size: 28px;
     font-weight: 700;
     color: var(--color-light-text);
+    line-height: 28px;
 }
 
 .text--green {
