--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -7,6 +7,11 @@
     border: 1px solid var(--color-light-divider);
 }
 
+.dark .paper {
+    background-color: var(--color-dark-fg);
+    border: 1px solid var(--color-dark-divider);
+}
+
 .paper__frame {
     box-sizing: border-box;
     position: absolute;
