--- a/src/assets/styles/components/table.css
+++ b/src/assets/styles/components/table.css
@@ -12,6 +12,10 @@
     border-bottom: 1px solid var(--color-light-divider);
 }
 
+.dark .table__row {
+    border-bottom: 1px solid var(--color-dark-divider);
+}
+
 .table__row:last-child {
     border: none;
 }
