fix: fix transfer table

--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -18,7 +18,7 @@
 
 .grid--transfer {
     grid-template-columns: 1fr 1fr 2fr;
-    grid-template-rows: auto auto auto auto 1fr;
+    grid-template-rows: auto auto auto 1fr;
 }
 
 .grid--withdraw {
