feat: work on new layout

--- a/src/assets/styles/components/input.css
+++ b/src/assets/styles/components/input.css
@@ -14,18 +14,12 @@
     background-color: var(--color-light-fg);
 }
 
-.input::placeholder {
-    color: #adb5bd;
-}
-
 .input--margin {
     margin-bottom: 24px;
 }
 
-.dark .input {
-    border: 1px solid var(--color-dark-divider);
-    color: var(--color-dark-text);
-    background-color: var(--color-dark-fg);
+.input::placeholder {
+    color: var(--color-light-text-alt);
 }
 
 .input:focus {
