--- a/src/assets/styles/components/button.css
+++ b/src/assets/styles/components/button.css
@@ -1,23 +1,22 @@
 .button {
     box-sizing: border-box;
     display: block;
-    width: 200px;
+    width: 100%;
     height: 48px;
+    padding-left: 24px;
+    padding-right: 24px;
     cursor: pointer;
     font-family: inherit;
-}
-
-.button--primary {
     border: none;
     background-color: var(--color-red);
 }
 
-.button--secondary {
-    border: 2px solid var(--color-red);
+.button--fixed {
+    width: auto;
 }
 
-.button--fluid {
-    width: 100%;
+.button--half {
+    width: 50%;
 }
 
 .button__label {
@@ -28,8 +27,4 @@
     color: var(--color-dark-text);
     text-transform: uppercase;
     letter-spacing: 1px;
-}
-
-.button--secondary > .button__label {
-    color: var(--color-red);
 }
