--- a/src/assets/styles/components/column.css
+++ b/src/assets/styles/components/column.css
@@ -2,20 +2,19 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 12px;
     width: 100%;
     height: 100%;
 }
 
-.column--no-gap {
-    gap: 0;
-}
-
 .column__section {
-    flex: 0 0 auto;
     box-sizing: border-box;
     width: 100%;
     height: auto;
+}
+
+.column__section--fixed {
+    flex: 0 0 auto;
 }
 
 .column__section--fluid {
