--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -11,6 +11,7 @@
     --color-light-text: #495057;
     --color-light-text-alt: #868e96;
     --color-light-divider: #e9ecef;
+    --color-light-divider-alt: #dee2e6;
     --color-light-spinner-track: #dee2e6;
 
     --color-red: #fa5252;
