--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -14,7 +14,8 @@
     --color-light-divider-alt: #dee2e6;
     --color-light-spinner-track: #dee2e6;
 
-    --color-red: #fa5252;
+    --color-red: #FF6B6B;
+    --color-light-red: #FFE3E3;
     --color-green: #40c057;
 }
 
