--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -15,8 +15,8 @@
     --color-light-spinner-track: #dee2e6;
 
     --color-red: #FF6B6B;
-    --color-light-red: #FFE3E3;
-    --color-green: #40c057;
+    --color-light-red: #FFC9C9;
+    --color-green: #51CF66;
 }
 
 html {
