--- a/src/assets/styles/components/text.css
+++ b/src/assets/styles/components/text.css
@@ -22,7 +22,7 @@
     margin-bottom: 8px;
 }
 
-.text--name {
+.text--account-name {
     font-size: 24px;
     font-weight: 700;
     color: var(--color-light-text);
