--- a/src/assets/styles/components/icon-button.css
+++ b/src/assets/styles/components/icon-button.css
@@ -19,6 +19,10 @@
     height: 48px;
 }
 
+.icon-button--border {
+    border: 1px solid var(--color-light-divider-alt);
+}
+
 .icon-button__icon {
     box-sizing: border-box;
     display: block;
