--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -15,6 +15,7 @@
 .paper__frame {
     box-sizing: border-box;
     position: absolute;
+    z-index: 50;
     top: 0;
     left: 0;
     width: 100%;
@@ -25,4 +26,14 @@
 
 .paper__frame::-webkit-scrollbar {
     display: none;
+}
+
+.paper__button {
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 60;
+    bottom: 16px;
+    right: 16px;
+    width: auto;
+    height: auto;
 }
