--- a/src/assets/styles/components/icon-button.css
+++ b/src/assets/styles/components/icon-button.css
@@ -19,8 +19,9 @@
     height: 48px;
 }
 
-.icon-button--border {
-    border: 1px solid var(--color-light-divider-alt);
+.icon-button--offshore {
+    border: 1px solid #FFE066;
+    background-color: var(--color-beach);
 }
 
 .icon-button__icon {
