feat: add validation for swift add

--- a/src/assets/styles/components/button.css
+++ b/src/assets/styles/components/button.css
@@ -9,6 +9,10 @@
     font-family: inherit;
 }
 
+.button--bottom {
+    margin-top: auto;
+}
+
 .button--primary {
     border: none;
     background-color: var(--color-red);
