--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -28,13 +28,17 @@
 }
 
 .grid--enterprise {
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto auto auto 1fr;
 }
 
 .grid__section {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+}
+
+.grid__section--align-bottom {
+    align-self: end;
 }
 
 .grid__section--col-span-2 {
