--- a/src/assets/styles/components/row.css
+++ b/src/assets/styles/components/row.css
@@ -7,6 +7,10 @@
     height: auto;
 }
 
+.row--align-end {
+    align-items: flex-end;
+}
+
 .row__section {
     box-sizing: border-box;
     width: auto;
