--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -37,6 +37,11 @@
     height: 100%;
 }
 
+.grid__section--with-border {
+    padding-bottom: 24px;
+    border-bottom: 1px solid var(--color-light-divider-alt);
+}
+
 .grid__section--align-bottom {
     align-self: end;
 }
