--- a/src/assets/styles/components/table.css
+++ b/src/assets/styles/components/table.css
@@ -7,6 +7,12 @@
     border-collapse: collapse;
 }
 
+.table__body {
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+}
+
 .table__row {
     box-sizing: border-box;
     border-bottom: 1px solid var(--color-light-divider);
