--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
-    padding: 4px 16px;
+    padding: 0 16px;
 }
 
 .paper__frame::-webkit-scrollbar {
