--- a/src/assets/styles/components/swift.css
+++ b/src/assets/styles/components/swift.css
@@ -1,22 +1,20 @@
 .swift {
     box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: auto;
+    padding-top: 16px;
+    padding-bottom: 16px;
     border-bottom: 1px solid var(--color-light-divider);
-}
-
-.swift:last-child {
-    border: none;
 }
 
 .swift__section {
     box-sizing: border-box;
     padding-top: 12px;
     padding-bottom: 12px;
-}
-
-.swift__section--align-right {
-    text-align: right;
 }
 
 .swift__name {
