--- a/src/assets/styles/components/swift.css
+++ b/src/assets/styles/components/swift.css
@@ -40,3 +40,70 @@
     color: var(--color-light-text-alt);
     line-height: 1;
 }
+
+.swift__switch {
+    box-sizing: border-box;
+    position: relative;
+    width: auto;
+    height: auto;
+}
+
+.swift__icon-button {
+    box-sizing: border-box;
+    display: inline-flex;
+    width: 48px;
+    height: 48px;
+    background-color: var(--color-light-bg);
+    border: 1px solid var(--color-light-divider);
+    cursor: pointer;
+}
+
+.swift__icon-button:hover {
+    background-color: #FFE3E3;
+    border: 1px solid #FFC9C9;
+}
+
+.swift__icon {
+    box-sizing: border-box;
+    display: block;
+    width: 24px;
+    height: 24px;
+    margin: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.swift__icon--delete {
+    background-image: url("/src/assets/images/delete.svg");
+}
+
+.swift__icon--transfer {
+    background-image: url("/src/assets/images/paste-form.svg");
+}
+
+.swift__switch[open] > .swift__icon-button > .swift__icon--delete {
+    background-image: url("/src/assets/images/close.svg");
+}
+
+.swift__button {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: -16px;
+    transform: translateX(-100%);
+    width: auto;
+    height: 48px;
+    padding-left: 24px;
+    padding-right: 24px;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: var(--color-dark-text);
+    border: none;
+    background-color: var(--color-red);
+}
