--- a/src/assets/styles/components/form.css
+++ b/src/assets/styles/components/form.css
@@ -116,16 +116,11 @@
     background-color: var(--color-light-red);
 }
 
-.form__error {
+.form__message {
     position: absolute;
-    margin: 0;
+    margin: 4px 0 0 0;
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 700;
     color: var(--color-red);
-    line-height: 1;
-}
-
-.form__error--on-input {
-    bottom: 18px;
-    right: 16px;
+    line-height: 16px;
 }
