feat: add swift paste list logic

--- a/src/assets/styles/components/swift.css
+++ b/src/assets/styles/components/swift.css
@@ -78,7 +78,7 @@
     background-image: url("/src/assets/images/delete.svg");
 }
 
-.swift__icon--transfer {
+.swift__icon--paste {
     background-image: url("/src/assets/images/paste-form.svg");
 }
 
