feat: experiment blur on balance value

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -16,7 +16,7 @@
 
     --color-red: #FF6B6B;
     --color-light-red: #FFC9C9;
-    --color-green: #51CF66;
+    --color-green: #51cf66;
     --color-beach: #FFF3BF;
 }
 
