--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -25,7 +25,15 @@
 }
 
 .paper__frame::-webkit-scrollbar {
-    display: none;
+    width: 8px;
+}
+
+.paper__frame::-webkit-scrollbar-thumb {
+    background-color: #dee2e6;
+}
+
+.paper__frame::-webkit-scrollbar-track {
+    border-left: 1px solid var(--color-light-divider);
 }
 
 .paper__button {
