feat: add dedicated button component

--- a/src/assets/styles/components/swift.css
+++ b/src/assets/styles/components/swift.css
@@ -11,6 +11,10 @@
     border-bottom: 1px solid var(--color-light-divider);
 }
 
+.swift--clickable {
+    cursor: pointer;
+}
+
 .swift:last-child {
     border: none;
 }
