--- a/src/assets/styles/components/icon.css
+++ b/src/assets/styles/components/icon.css
@@ -10,6 +10,11 @@
     border: 1px solid var(--color-light-divider);
 }
 
+.icon--no-bg {
+    background-color: transparent;
+    border: none;
+}
+
 .icon--delete {
     background-image: url("/src/assets/images/delete.svg");
 }
